--- a/pages/control/tjzljc/zljcDetail/zljcDetail.wxml
+++ b/pages/control/tjzljc/zljcDetail/zljcDetail.wxml
@@ -108,6 +108,36 @@
 	</view>
 </block>
 <!--同意不同意按钮 end-->
+
+<!--不同意页面 start-->
+<block wx:if="{{problem.status == 4}}">
+	<view style="background-color: #fff;height: 250px;" >
+		<van-divider contentPosition="center">回复</van-divider>
+			<van-field
+			value="{{reply}}"
+			label="整改回复"
+			type="textarea"
+			placeholder="请输入"
+			autosize
+			show-word-limit
+			maxlength="{{maxPlanLength}}"
+			bind:input="inputAnswer"
+			border="{{true}}"
+			/>
+			<view class='ui_uploader_cell'>
+				<view class='ui_uploader_item' wx:for="{{files1}}" wx:key="{{index}}">
+					<icon class='ui_uploader_item_icon' bindtap='clearImg1' data-index="{{index}}" type="clear" size="20" color="red" />
+					<image bindtap='previewImage1' data-index="{{index}}" src='{{item}}'></image>
+				</view>
+				<view class='ui_uploader' bindtap='chooseImage1' wx:if="{{ files1.length < 10 }}"></view>
+			</view>
+			<view>
+				<van-button color="#0089dd" size="small" bindtap="commitAnswerQuality">完成</van-button>
+			</view>
+	</view>
+	</block>
+	<!--不同意页面 end-->
+
 	<!--定档 start-->
 	<view wx:if="{{problem.status == 3}}">
 		<van-tag type="success" size="large">已同意</van-tag>
